<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="ST_MKS_903" Id="{fae0b526-c3b8-4411-bebc-96fdef8a029d}">
    <Declaration><![CDATA[TYPE ST_MKS_903 EXTENDS ST_VacuumGauge:
STRUCT

	//Ion gauges only
	i_xHvOn	:	BOOL;
	
	// Simulation parameters
	tonIC	:	TON := (PT := T#10S);

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>