<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_MKS_422" Id="{1e7b5c4b-867d-428c-a822-12e2cdc9d71f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_MKS_422
VAR_INPUT
	stVolume : ST_Volume;
END_VAR
VAR_OUTPUT
END_VAR
VAR_IN_OUT
	stGauge	:	ST_MKS_422;
END_VAR
VAR

END_VAR
VAR CONSTANT
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* 
MKS 422 Vacuum gauge

A vacuum gauge takes as input, the pressure of the volume it is attached to,
and produces on its analog output, a corresponding voltage.


*)

(* Operation 
When the HV on signal is active, the gauge will take a little bit of time to
start an ion current.
*)
stGauge.tonIC.IN	:=	stGauge.i_xHvOn;	
stGauge.tonIC();


(* Pressure *)
IF stGauge.tonIC.Q THEN
	(*set gauge real pressure based on chamber real pressure*)
	stGauge.rPress := stVolume.rPressure;
	(*set gauge raw pressure based on transformation of real pressure*)
	stGauge.q_iRawPress := F_MKS_937(stGauge.rPress);
ELSIF stGauge.i_xHvOn THEN
	stGauge.rPress := 0;
	stGauge.q_iRawPress := 0; // gauge on, waiting for spark
ELSE
	stGauge.rPress := 0;
	stGauge.q_iRawPress := 0; // gauge not on
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_MKS_422">
      <LineId Id="3" Count="17" />
      <LineId Id="41" Count="2" />
      <LineId Id="21" Count="1" />
      <LineId Id="44" Count="0" />
      <LineId Id="23" Count="1" />
      <LineId Id="45" Count="0" />
      <LineId Id="25" Count="1" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>